tests/init-global/pos/footprint-local.scala
object A:
  val f = foo()
  val a = f()
  def foo(): () => Int =
    var x = 10
    () => x
